# aoc-2024-cpp

./: .clang-format  .gitignore  CMakeLists.txt  day1.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day2.hpp  day20.hpp  day21.hpp  day22.hpp  day23.hpp  day24.hpp  day25.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp  main.cpp
input/: day24_part2.txt
