cmake_minimum_required(VERSION 3.29)
project(aoc2024)

set(CMAKE_CXX_STANDARD 14)

add_executable(aoc2024 main.cpp
        day1.hpp
        day2.hpp
        day3.hpp
        day4.hpp
        day5.hpp
        day6.hpp
        day7.hpp
        day8.hpp
        day9.hpp
        day10.hpp
        day11.hpp
        day12.hpp
        day13.hpp
        day14.hpp
        day15.hpp
        day16.hpp
        day17.hpp
        day18.hpp
        day19.hpp
        day25.hpp
        day20.hpp
        day21.hpp
        day22.hpp
)
